# Laba2

./: .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt
apps/src/Main/: main.cpp
libs/core/: CMakeLists.txt
libs/core/include/core/General/: Employee.h  File.h  Process.h  Thread.h  Type.h
libs/core/src/General/: Employee.cpp  File.cpp  Process.cpp  Thread.cpp
tests/: CMakeLists.txt
tests/General/: File_tests.cpp  Process_tests.cpp  Thread_tests.cpp
